Fix: Footer misalignment

--- a/src/app/css/HeaderStyle.css
+++ b/src/app/css/HeaderStyle.css
@@ -1,5 +1,6 @@
 .menu-button {
-  margin-right: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
   align-content: center;
   font-size: 24px;
 }
